style/breakpoint/default/splash.styl
main
header
.screen-loader
   transition: opacity 0.2s linear 0.2s

.intro
   main
   header
   .screen-loader
      opacity: 0
      transition-delay: 0s

.play
   .splash
      .logo
         opacity: 1
         transform: translate( -50%, -50% )

.ready
   .splash
      .logo
         transform:  translate( -50%, -150% )
         opacity: 0
         transition: opacity 0.2s linear 0s, transform 0.4s ease-in 0s

.splash
   height: 100vh
   left: 0
   position: fixed
   top: 0
   width: 100%
   z-index: 20

   .logo
      display: block
      fill: $light
      left: 50%
      opacity: 0
      position: absolute
      top: 50%
      transform: translate( -50%, -20% )
      transform-origin: 0 0
      transition: opacity 0.8s $ease-out-quart, transform 1s $ease-out-quart
      transition-delay: 0.2s
      width: rem( 188 )

   svg
      height: 100%
      width: 100%

   .big-wheel
      animation: spinTranslate 0.5s linear infinite
      height: ( 31/90*100% )
      left: ( 73/188*100% )
      position: absolute
      top: ( 20/90*100% )
      transform: translate( -50%, -50% )
      width: ( 30/188*100% )
      transform-origin: 0 0

   .small-wheel
      animation: spin 0.4s linear infinite
      height:( 17/90*100% )
      left: ( 70/188*100% )
      position: absolute
      top: ( 58/90*100% )
      width: ( 18/188*100% )

